syntax = "proto3";

package cmd.laurel.internal.conf;

import "config.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/aide-family/moon/cmd/laurel/internal/conf;conf";

message Bootstrap {
  config.Environment environment = 1;
  config.Server server = 2;
  config.Cache cache = 3;
  config.Log log = 4;
  config.Registry registry = 5;
  Auth auth = 6;
  config.MicroServer palace = 7;
  repeated MetricVec metricVecs = 8;
  config.I18N i18n = 9;
  repeated string taskScripts = 10;
  config.ConfigSource configSource = 11;
  repeated ScrapeConfig scrapeConfigs = 12;
}

message Auth {
  message Token {
    string token = 1;
    string name = 2;
  }
  config.JWT jwt = 1;
  repeated Token tokens = 2;
}

message MetricVec {
  enum MetricType {
    METRIC_TYPE_UNKNOWN = 0;
    COUNTER = 1;
    GAUGE = 2;
    HISTOGRAM = 3;
    SUMMARY = 4;
  }
  message Objective {
    double quantile = 1;
		double value = 2;
	}
  MetricType type = 1;
  string namespace = 2;
  string subSystem = 3;
  string name = 4;
  repeated string labels = 5;
  string help = 6;
  repeated Objective objectives = 7;
  int64 maxAge = 8;
  uint32 ageBuckets = 9;
  uint32 bufCap = 10;
  repeated double buckets = 11;
	double nativeHistogramBucketFactor = 12;
	double nativeHistogramZeroThreshold = 13;
	uint32 nativeHistogramMaxBucketNumber = 14;
	int64 nativeHistogramMinResetDuration = 15;
	double nativeHistogramMaxZeroThreshold = 16;
	int64 nativeHistogramMaxExemplars = 17;
	int64 nativeHistogramExemplarTTL = 18;
}

message ScrapeConfig {
  string jobName = 1;
  repeated ScrapeTarget scrapeTargets = 2;
  map<string, string> labels = 3;
  google.protobuf.Duration scrapeInterval = 4;
}

message BasicAuth {
  string username = 1;
  string password = 2;
}

message TLS {
  string serverName = 1;
  string clientCert = 2;
  string clientKey = 3;
  bool skipVerify = 4;
  string ca = 5;
}

message ScrapeTarget {
  string target = 1;
  map<string, string> labels = 2;
  google.protobuf.Duration timeout = 3;
  BasicAuth basicAuth = 4;
  TLS tls = 5;
  map<string, string> params = 6;
  map<string, string> headers = 7;
  string metricsPath = 8;
  string scheme = 9;
}
